Added the new task, project and list section. Changed some colors

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,12 @@
     <title>ToDo List</title>
     <script src="index.js" defer></script>
     <script src="addtask.js" defer></script>
+    <script src="addproject.js" defer></script>
+    <script src="addlist.js" defer></script>
+    <script src="addmenu.js" defer></script>
     <script src="tasklogic.js" defer></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="addtask.css">
-    <script src="https://jsuites.net/v4/jsuites.js" defer></script>
-    <script src="https://jsuites.net/v4/jsuites.webcomponents.js" defer></script>
-    <link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
 </head>
 <body>
     <div class="container">
@@ -38,7 +38,6 @@
         </div>
         <div class="maincontent">
         </div>
-        <div class="footer"></div>
     </div>
 </body>
 </html>
