--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo List</title>
-    <script src="addmenu.js" defer></script>
-    <script src="index.js" defer></script>
+    <script src="addmenu.js" defer></script>    
     <script src="addtask.js" defer></script>
     <script src="addproject.js" defer></script>
-    <script src="addlist.js" defer></script>
-    
+    <script src="addlist.js" defer></script>    
     <script src="tasklogic.js" defer></script>
+    <script src="taskDom.js" defer></script>
+    <script src="index.js" defer></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="addtask.css">
 </head>
