--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
     <script src="addproject.js" defer></script>
     <script src="addlist.js" defer></script>    
     <script src="tasklogic.js" defer></script>
+    <script src="edittask.js" defer></script>
     <script src="taskDom.js" defer></script>
+    
     <script src="index.js" defer></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="addtask.css">
