Finished the Projects logic, linked it with each Task module, aadded an id object in the iife

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <script src="addlist.js" defer></script>    
     <script src="tasklogic.js" defer></script>
     <script src="edittask.js" defer></script>
+    <script src="editProjectAPI.js" defer></script>
     <script src="taskDom.js" defer></script>
     
     <script src="index.js" defer></script>
